# baton-harness

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
config/: WORKFLOW.md  deployment.env  ruleset.compare-keys.app.json  ruleset.compare-keys.json  ruleset.feature.json  ruleset.main.json
config/example-project/: README.md
docs/: architecture-spec.md  baton-deepdive-findings.md  chain-orchestration-design.md  harness-design.md  open-questions.md  pilot-validation-findings.md  plan-31-after-run-idempotent-crash-safe.md  plan-33-liveness-health-detection.md  plan-34-observability.md  plan-40-above-container-recovery.md  probe-merge-denial.md  problem-statement.md  research-findings.md  smoke-test-daemon.md  smoke-test-spike.md  spike-findings.md
docs/research/: 2026-06-05-baton-system-prompt-injection.md  2026-06-06-issue-dag-orchestration.md  2026-06-21-looper-vs-baton-harness.md  2026-07-05-alternative-orchestration-architectures.md
docs/superpowers/plans/: 2026-06-23-slice-3b-merge-boundary.md  2026-07-01-preflight-doctor-193.md  2026-07-09-daemon-report-scenario-harness-243.md  2026-07-14-assimilate-vendored-symphony-224.md  2026-07-20-module-refactor-proposal-268.md
docs/superpowers/specs/: dependency-chain-orchestration.md
patches/: README.md  VP-1-run-hook-env.diff  VP-2-exclude-labels-recheck.diff  VP-3-progress-callback.diff  VP-4-worker-disallow-merge.diff  VP-5-pr-exists-early-exit.diff  VP-6-state-load-on-startup.diff  VP-7-hooks-non-login-shell.diff  VP-8-required-checks-config.diff  VP-9-workspace-symphony-dir-abspath.diff  mypy-strict-remediation.diff
scripts/: README.md  after-create.sh  after-run.sh  before-run.sh  pilot-dry-run.sh  probe_assert.py
scripts/tests/: test-after-run.sh  test-hooks.sh
src/baton_harness/: __init__.py  _auth.py  _cli.py  after_create.py  after_run.py  before_run.py
src/baton_harness/chain/: __init__.py  alert_post.py  app_auth.py  branches.py  bws_client.py  cli.py  daemon.py  dag.py  doctor.py  escalation.py  gh_deps.py  heartbeat.py  identity.py  label_ops.py  labels.py  merge.py  obs_config.py  reconcile.py  recovery.py  redispatch.py  registry.py  ruleset_status.py  runlog.py  sandbox_config.py  scheduler.py  subproc.py
src/baton_harness/chain/daemon/: __init__.py  gh_api_helpers.py  launch_gate.py  poll.py  push_probe.py  work_unit.py
src/baton_harness/hooks/: __init__.py  force_pr_not_merge.py
templates/: CLAUDE.md.template  README.md
tests/: __init__.py  conftest.py  test_after_create.py  test_after_create_drops_claude_settings.py  test_after_run.py  test_after_run_guard_json_retry.py  test_app_auth.py  test_auth.py  test_before_run.py  test_bws_client.py  test_cli.py  test_force_pr_not_merge_hook.py  test_hook_env_awareness.py  test_hooks.py  test_probe_merge_denial.py  test_provision_ruleset_app_auth.py  test_provision_ruleset_idempotent.py  test_required_checks_match_ci_yml.py  test_ruleset_status.py  test_smoke.py
tests/chain/: __init__.py  conftest.py  test_alert_post.py  test_branches.py  test_cli.py  test_cli_bootstrap_vault.py  test_cli_doctor_gate.py  test_daemon.py  test_daemon_orphan_scan.py  test_daemon_park_label_clear.py  test_daemon_preflight.py  test_daemon_push_probe.py  test_dag.py  test_doctor.py  test_escalation.py  test_gh_deps.py  test_heartbeat.py  test_heartbeat_ping.py  test_identity.py  test_identity_spawn_guard.py  test_labels.py  test_merge.py  test_obs_config.py  test_reconcile.py  test_reconcile_git_credential_helper.py  test_reconcile_oauth_cred.py  test_recovery.py  test_redispatch.py  test_runlog.py  test_sandbox_config.py  test_scheduler.py  test_subproc.py  test_worker_disallowed.py  test_worktree_gc.py
tests/fixtures/: ruleset.feature.expected.json  ruleset.feature.live.json  ruleset.main.expected.json  ruleset.main.live.json
tests/fixtures/fake_gh/: gh
