[build-system]
# hatchling chosen over setuptools because it has zero config for src/ layout
# (src layout is autodetected), integrates with uv cleanly, and produces
# correct editable installs without legacy shims. No hatch.toml needed for a
# package this small.
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baton-harness"
version = "0.1.0"
description = "Policy and tooling layer wrapping Baton for autonomous Claude Code agent runs."
requires-python = ">=3.10"
# Runtime dependencies: pyyaml and jinja2 are required by the vendored
# symphony package (config.py uses yaml, prompt.py uses jinja2).
# watchfiles is intentionally excluded — the symphony poller is dropped
# in favour of the custom always-on daemon (CLAUDE.md § Upstream dependency).
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff==0.15.20",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

# Console entry points — one per hook.
# These are the invocation form that WORKFLOW.md hook lines should call:
#   after_create: bh-after-create
#   before_run:   bh-before-run
#   after_run:    bh-after-run
#
# Example WORKFLOW.md hook line (issue #5):
#   after_create: bh-after-create
#   before_run:   bh-before-run
#   after_run:    bh-after-run
#
# After `pip install -e .` or `uv pip install -e .`, these commands are on
# PATH inside the venv. The launcher (bin/run.sh) activates the venv or
# ensures they are resolvable before starting Baton.
[project.scripts]
bh-after-create = "baton_harness.after_create:main"
bh-before-run = "baton_harness.before_run:main"
bh-after-run = "baton_harness.after_run:main"
bh-daemon = "baton_harness.chain.cli:main"
bh-force-pr-not-merge = "baton_harness.hooks.force_pr_not_merge:main"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/baton_harness"]

[tool.ruff]
line-length = 79
target-version = "py310"
# The vendored symphony tree is being assimilated as owned code (#224):
# each file is removed from this list as it is cleaned, file by file,
# leaves-to-root (see docs/superpowers/plans/2026-07-14-assimilate-
# vendored-symphony-224.md). Directory-level exclusion can't be lifted
# incrementally, so this is an explicit per-file list rather than a
# single "src/baton_harness/vendor" directory entry.
exclude = [
    "src/baton_harness/vendor/symphony/orchestrator.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints)
    "D",   # pydocstyle (docstring rules)
]
ignore = [
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
strict = true
# stdlib subprocess/json are typed; no third-party stubs needed.
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

# mypy: ignore errors in the not-yet-assimilated portion of the vendored
# tree (#224). Each module is removed from this list as it is cleaned,
# file by file, leaves-to-root (see docs/superpowers/plans/2026-07-14-
# assimilate-vendored-symphony-224.md). Recorded as
# patches/mypy-strict-remediation.diff (kept separate from the behaviour
# patches VP-1, VP-2, etc.).
[[tool.mypy.overrides]]
module = [
    "baton_harness.vendor.symphony.orchestrator",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
